# llm_model

./: pyproject.toml  机电安装工程类质量管理软科项目知识学习清单.csv
llm/: main.py  test.py
